# chinook-support-bot

./: .gitignore  README.md  demo_script.md  pyproject.toml
evals/: __init__.py  evaluators.py  regression_examples.py  run_comparison.py  run_v0_eval.py  run_v1_eval.py  v0_examples.py  v1_examples.py
scripts/: demo_v0.py  demo_v1.py  download_chinook.py  prepare_demo.py
src/chinook_bot/: __init__.py  chat_loop.py  db.py  langsmith_config.py  run_v0.py  run_v1.py  v0_agent.py  v0_tools.py  v1_agent.py  v1_context.py  v1_repository.py  v1_tools.py
src/chinook_support_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_chat_loop.py  test_db.py  test_v1_repository.py  test_v1_safety.py
