[project]
name = "chinook-support-bot"
version = "0.1.0"
description = "Local v0 customer support bot for the Chinook SQLite database."
authors = [
  { name = "Chinook Support Demo", email = "noreply@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=1.3,<2.0",
  "langchain-openai>=1.3,<2.0",
  "langsmith>=0.9,<1.0",
  "python-dotenv>=1.0.0",
  "requests>=2.30.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
