[project]
name = "chinook-support-bot"
version = "0.1.0"
description = "v0/v1 LangChain and LangSmith demo for a Chinook customer support agent."
authors = [
  { name = "Chinook Support Demo", email = "noreply@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=1.3,<2.0",
  "langchain-openai>=1.3,<2.0",
  "langsmith>=0.9,<1.0",
  "python-dotenv>=1.0.0",
  "requests>=2.30.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
